--- a/.github/workflows/buildPush.yaml
+++ b/.github/workflows/buildPush.yaml
@@ -1,44 +1,52 @@
-name: Reusable - Build and Push Docker Image
+name: Build and Push Docker Image
 
 on:
   workflow_call:
     inputs:
-      image_tag_prefix:       # 🆕 Replaces fixed environment tags (e.g. dev/staging/prod)
+      image_tag_prefix:
         required: true
         type: string
-      version_suffix:         # 🆕 Optional version suffix (commit SHA, PR #, tag, etc.)
-        required: false
+      version_suffix:
+        required: true
         type: string
 
 jobs:
   build-push-image:
     runs-on: ubuntu-latest
+    timeout-minutes: 10
+
+    env:
+      AWS_REGION: ${{ secrets.AWS_REGION }}
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout source code
+        uses: actions/checkout@v4
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-region: ${{ secrets.AWS_REGION || 'us-west-2'}}
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+          aws-access-key-id: ${{ env.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ env.AWS_SECRET_ACCESS_KEY }}
 
       - name: Login to Amazon ECR
-        id: login-to-ecr
+        id: login-ecr
         uses: aws-actions/amazon-ecr-login@v2
 
-      - name: Build, tag, and push Docker image
+      - name: Build, Tag, and Push Docker Image
         env:
-          REGISTRY: ${{ steps.login-to-ecr.outputs.registry }}
+          REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           REPOSITORY: cp2-githubactions
-
-          # 🆕 These two env vars dynamically build the tag
-          TAG_SUFFIX: ${{ inputs.version_suffix != '' && format('-{0}', inputs.version_suffix) || '' }}
-          TAG_FULL: ${{ inputs.image_tag_prefix }}${{ inputs.version_suffix != '' && format('-{0}', inputs.version_suffix) || '' }}
-
+          IMAGE_TAG_PREFIX: ${{ inputs.image_tag_prefix }}
+          VERSION_SUFFIX: ${{ inputs.version_suffix }}
         run: |
-          echo "Using image tag: $TAG_FULL"
+          echo "Building Docker image..."
           docker build -t $REPOSITORY .
-          docker tag $REPOSITORY:latest $REGISTRY/$REPOSITORY:$TAG_FULL
-          docker push $REGISTRY/$REPOSITORY:$TAG_FULL
+
+          echo "Tagging Docker image..."
+          docker tag $REPOSITORY:latest $REGISTRY/$REPOSITORY:${IMAGE_TAG_PREFIX}-${VERSION_SUFFIX}
+
+          echo "Pushing Docker image to ECR..."
+          docker push $REGISTRY/$REPOSITORY:${IMAGE_TAG_PREFIX}-${VERSION_SUFFIX}
