added simple comment to checkout the dev branch

--- a/.github/workflows/dispatchOnPR.yaml
+++ b/.github/workflows/dispatchOnPR.yaml
@@ -34,3 +34,4 @@ jobs:
         with:
           image_tag_prefix: prod
           version_suffix: pr${{ github.event.pull_request.number }}-${{ github.sha }}
+# this is a dev update 
