--- a/.github/workflows/dispatchOnPR.yaml
+++ b/.github/workflows/dispatchOnPR.yaml
@@ -43,4 +43,4 @@ jobs:
         with:
           image_tag_prefix: dev
           version_suffix: pr${{ github.event.pull_request.number }}-${{ github.sha }}
-#added simple comment
+#added simple comments
