--- a/.github/workflows/buildPush.yaml
+++ b/.github/workflows/buildPush.yaml
@@ -18,6 +18,13 @@ jobs:
     steps:
       - name: Checkout source code
         uses: actions/checkout@v4
+      
+      - name: Check if secrets are available
+        run: |
+          echo "AWS Region: ${{ secrets.AWS_REGION }}"
+          echo "AWS Access Key ID: ${{ secrets.AWS_ACCESS_KEY_ID }}"
+          echo "AWS Secret Access Key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}"
+
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
