--- a/.github/workflows/buildPush.yaml
+++ b/.github/workflows/buildPush.yaml
@@ -52,3 +52,4 @@ jobs:
 
           echo "Pushing Docker image to ECR..."
           docker push $REGISTRY/$REPOSITORY:${IMAGE_TAG_PREFIX}-${VERSION_SUFFIX}
+# added comment
