added debug section

--- a/.github/workflows/buildPush.yaml
+++ b/.github/workflows/buildPush.yaml
@@ -19,7 +19,12 @@ jobs:
       - name: Checkout source code
         uses: actions/checkout@v4
 
-      
+      # ✅ Debug step: Confirm secrets exist without leaking values
+      - name: Check if required secrets are available
+        run: |
+          if [ -z "${{ secrets.AWS_REGION }}" ]; then echo "❌ AWS_REGION is missing"; exit 1; else echo "✅ AWS_REGION is set"; fi
+          if [ -z "${{ secrets.AWS_ACCESS_KEY_ID }}" ]; then echo "❌ AWS_ACCESS_KEY_ID is missing"; exit 1; else echo "✅ AWS_ACCESS_KEY_ID is set"; fi
+          if [ -z "${{ secrets.AWS_SECRET_ACCESS_KEY }}" ]; then echo "❌ AWS_SECRET_ACCESS_KEY is missing"; exit 1; else echo "✅ AWS_SECRET_ACCESS_KEY is set"; fi
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
