--- a/.github/workflows/buildPush.yaml
+++ b/.github/workflows/buildPush.yaml
@@ -18,12 +18,13 @@ jobs:
     steps:
       - name: Checkout source code
         uses: actions/checkout@v4
-        
-      - name: Debug event
-        run: echo "Triggered by: ${{ github.event_name }}"
 
-      # ✅ Debug step: Confirm secrets exist without leaking values
-      - name: Check if required secrets are available
+      # ✅ Debug: Check triggering event
+      - name: Debug GitHub event
+        run: echo "🔁 Triggered by: ${{ github.event_name }}"
+
+      # ✅ Debug: Confirm all secrets are present
+      - name: Debug secrets presence
         run: |
           if [ -z "${{ secrets.AWS_REGION }}" ]; then echo "❌ AWS_REGION is missing"; exit 1; else echo "✅ AWS_REGION is set"; fi
           if [ -z "${{ secrets.AWS_ACCESS_KEY_ID }}" ]; then echo "❌ AWS_ACCESS_KEY_ID is missing"; exit 1; else echo "✅ AWS_ACCESS_KEY_ID is set"; fi
@@ -44,14 +45,3 @@ jobs:
         env:
           REGISTRY: ${{ steps.login-ecr.outputs.registry }}
           REPOSITORY: cp2-githubactions
-          IMAGE_TAG_PREFIX: ${{ inputs.image_tag_prefix }}
-          VERSION_SUFFIX: ${{ inputs.version_suffix }}
-        run: |
-          echo "Building Docker image..."
-          docker build -t $REPOSITORY .
-
-          echo "Tagging Docker image..."
-          docker tag $REPOSITORY:latest $REGISTRY/$REPOSITORY:${IMAGE_TAG_PREFIX}-${VERSION_SUFFIX}
-
-          echo "Pushing Docker image to ECR..."
-          docker push $REGISTRY/$REPOSITORY:${IMAGE_TAG_PREFIX}-${VERSION_SUFFIX}
