--- a/.github/workflows/dispatchOnPR.yaml
+++ b/.github/workflows/dispatchOnPR.yaml
@@ -3,45 +3,60 @@ name: CI/CD Dispatch on PR to Main
 on:
   pull_request:
     branches:
-      - main
+      - main  # Trigger when a PR is opened into main
 
 jobs:
-  detect-source:
+  detect-source-and-run:
     runs-on: ubuntu-latest
-    env:
-      AWS_REGION: ${{ secrets.AWS_REGION }}
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-    outputs:
-      source_branch: ${{ steps.get_branch.outputs.source_branch }}
+
     steps:
-      - name: Checkout code
+      # ✅ Step 1: Checkout the repo so local workflows are accessible
+      - name: Checkout repository
         uses: actions/checkout@v4
 
+      # ✅ Step 2: Check if AWS secrets are set
+      - name: Validate AWS Secrets
+        run: |
+          if [ -z "${{ secrets.AWS_REGION }}" ]; then
+            echo "❌ AWS_REGION is missing"
+            exit 1
+          fi
+          if [ -z "${{ secrets.AWS_ACCESS_KEY_ID }}" ]; then
+            echo "❌ AWS_ACCESS_KEY_ID is missing"
+            exit 1
+          fi
+          if [ -z "${{ secrets.AWS_SECRET_ACCESS_KEY }}" ]; then
+            echo "❌ AWS_SECRET_ACCESS_KEY is missing"
+            exit 1
+          fi
+          echo "✅ All required AWS secrets are set"
+
+      # ✅ Step 3: Get the source branch of the PR (e.g., dev, staging, prod)
       - name: Get source branch
-        id: get_branch
-        run: echo "source_branch=${{ github.head_ref }}" >> $GITHUB_OUTPUT
+        id: source
+        run: |
+          echo "source_branch=${{ github.head_ref }}" >> $GITHUB_OUTPUT
 
-  dev:
-    if: ${{ needs.detect-source.outputs.source_branch == 'dev' }}
-    needs: detect-source
-    uses: ./.github/workflows/buildPush.yaml
-    with:
-      image_tag_prefix: dev
-      version_suffix: pr${{ github.event.pull_request.number }}-${{ github.sha }}
+      # ✅ Step 4: Call the dev workflow if the PR is from dev
+      - name: Call dev workflow
+        if: ${{ github.head_ref == 'dev' }}
+        uses: ./.github/workflows/buildPush.yaml
+        with:
+          image_tag_prefix: dev
+          version_suffix: pr${{ github.event.pull_request.number }}-${{ github.sha }}
 
-  staging:
-    if: ${{ needs.detect-source.outputs.source_branch == 'staging' }}
-    needs: detect-source
-    uses: ./.github/workflows/buildPush.yaml
-    with:
-      image_tag_prefix: staging
-      version_suffix: pr${{ github.event.pull_request.number }}-${{ github.sha }}
+      # ✅ Step 5: Call the staging workflow if the PR is from staging
+      - name: Call staging workflow
+        if: ${{ github.head_ref == 'staging' }}
+        uses: ./.github/workflows/buildPush.yaml
+        with:
+          image_tag_prefix: staging
+          version_suffix: pr${{ github.event.pull_request.number }}-${{ github.sha }}
 
-  prod:
-    if: ${{ needs.detect-source.outputs.source_branch == 'prod' }}
-    needs: detect-source
-    uses: ./.github/workflows/buildPush.yaml
-    with:
-      image_tag_prefix: prod
-      version_suffix: pr${{ github.event.pull_request.number }}-${{ github.sha }}
+      # ✅ Step 6: Call the prod workflow if the PR is from prod
+      - name: Call prod workflow
+        if: ${{ github.head_ref == 'prod' }}
+        uses: ./.github/workflows/buildPush.yaml
+        with:
+          image_tag_prefix: prod
+          version_suffix: pr${{ github.event.pull_request.number }}-${{ github.sha }}
