--- a/.github/workflows/dispatchOnPR.yaml
+++ b/.github/workflows/dispatchOnPR.yaml
@@ -17,16 +17,16 @@ jobs:
       # ✅ Step 2: Check if AWS secrets are set
       - name: Validate AWS Secrets
         run: |
-          if [ -z "${{ secrets.AWS_REGION }}" ]; then
-            echo "❌ AWS_REGION is missing"
+          if [ -z "${{ secrets.REGION }}" ]; then
+            echo "❌ REGION is missing"
             exit 1
           fi
-          if [ -z "${{ secrets.AWS_ACCESS_KEY_ID }}" ]; then
-            echo "❌ AWS_ACCESS_KEY_ID is missing"
+          if [ -z "${{ secrets.ACCESSID }}" ]; then
+            echo "❌ ACCESSID is missing"
             exit 1
           fi
-          if [ -z "${{ secrets.AWS_SECRET_ACCESS_KEY }}" ]; then
-            echo "❌ AWS_SECRET_ACCESS_KEY is missing"
+          if [ -z "${{ secrets.ACCESSSECRET }}" ]; then
+            echo "❌ ACCESSSECRET is missing"
             exit 1
           fi
           echo "✅ All required AWS secrets are set"
