--- a/.github/workflows/buildPush.yaml
+++ b/.github/workflows/buildPush.yaml
@@ -24,22 +24,22 @@ jobs:
       # ✅ Debug: Confirm all secrets are present
       - name: Debug secrets presence
         run: |
-          if [ -z "${{ secrets.AWS_REGION }}" ]; then
-            echo "❌ AWS_REGION is missing"
+          if [ -z "${{ secrets.REGION }}" ]; then
+            echo "❌ REGION is missing"
             exit 1
           else
             echo "✅ AWS_REGION is set"
           fi
 
-          if [ -z "${{ secrets.AWS_ACCESS_KEY_ID }}" ]; then
-            echo "❌ AWS_ACCESS_KEY_ID is missing"
+          if [ -z "${{ secrets.ACCESSID }}" ]; then
+            echo "❌ ACCESSID is missing"
             exit 1
           else
             echo "✅ AWS_ACCESS_KEY_ID is set"
           fi
 
-          if [ -z "${{ secrets.AWS_SECRET_ACCESS_KEY }}" ]; then
-            echo "❌ AWS_SECRET_ACCESS_KEY is missing"
+          if [ -z "${{ secrets.ACCESSSECRET }}" ]; then
+            echo "❌ ACCESSSECRET is missing"
             exit 1
           else
             echo "✅ AWS_SECRET_ACCESS_KEY is set"
@@ -48,9 +48,9 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          aws-region: ${{ secrets.AWS_REGION }}
-          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ secrets.REGION }}
+          aws-access-key-id: ${{ secrets.ACCESSID }}
+          aws-secret-access-key: ${{ secrets.ACCESSSECRET }}
 
       - name: Login to Amazon ECR
         id: login-ecr
